# voise_chat

./: .editorconfig  .env.signal.example  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOY_RAILWAY_RENDER_RU.md  Dockerfile  README.md  SECURITY_NOTES.md  SIGNING_RU.md  SPRINTS_PLAN.md  USER_GUIDE_RU.md  railway.toml  render.yaml
.github/workflows/: ci.yml  release.yml
apps/client/: Cargo.toml
apps/client/src/: audio_fx.rs  audio_probe.rs  jitter_buffer.rs  main.rs  opus_codec.rs  webrtc_bootstrap.rs
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/signal-server/: Cargo.toml
apps/signal-server/src/: main.rs
crates/nexuschat-proto/: Cargo.toml
crates/nexuschat-proto/src/: lib.rs
download/: nizamvoice.msi
scripts/: build-portable.ps1  check-deploy.ps1  deploy-railway.ps1  mesh-load-test.ps1  sign-release.ps1  smoke-test.ps1  start-desktop.bat
ui/: app.js  index.html  styles.css
