[workspace]
members = [
  "apps/signal-server",
  "apps/client",
  "apps/desktop/src-tauri",
  "crates/nexuschat-proto"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.0.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
