[package]
name = "nexuschat-client"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
audiopus = "0.3.0-rc.0"
bytes = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.16"
dirs = "6"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
nexuschat-proto = { path = "../../crates/nexuschat-proto" }
webrtc = "0.14"
