[package]
name = "signal-server"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nexuschat-proto = { path = "../../crates/nexuschat-proto" }

[dev-dependencies]
tower = "0.5"
